--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E-Futsal</string>
+    <string name="app_name">Futsal Android</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login</string>
     <!-- Strings related to login -->
